--- a/web/templates/homePage.html
+++ b/web/templates/homePage.html
@@ -1,14 +1,16 @@
-
-<!--<div id="page">
-    <table class="table table-bordered" id="math_board">
-  
-    </table>
-
-</div>-->
-
-
-
-
+<div id="page">
+    <div class="container pull-left">
+        <h3 class="text-primary" >Select the Matrix_Base: </h3>
+        <form name="myform" action="">
+            <div><br>
+                <input type="radio" name="group1" value="Decimal" > Decimal<br>
+                <input type="radio" name="group1" value="Binary" > Binary<br>
+                <input type="radio" name="group1" value="Hex"> Hex
+            </div>
+        </form>
+        <button type="button" class="btn btn-primary" onclick="selectOption()">Matrix Base option</button>
+    </div>
+</div>
 
 
 
