--- a/web/css/main.css
+++ b/web/css/main.css
@@ -47,7 +47,7 @@ tr,td {
     border-bottom: 1px dotted black;
 }
 
-.tooltip .tooltiptext {
+/*.tooltip .tooltiptext {
     visibility: hidden;
     width: 120px;
     background-color: black;
@@ -56,9 +56,9 @@ tr,td {
     border-radius: 6px;
     padding: 5px 0;
     
-    /* Position the tooltip */
+     Position the tooltip 
     position: absolute;
     z-index: 1;
     top: -5px;
     left: 105%;
-}
+}*/
