--- a/web/templates/homePage.html
+++ b/web/templates/homePage.html
@@ -10,10 +10,19 @@
         </form>
         <button type="button" class="btn btn-primary" onclick="selectOption()">Matrix Base option</button>
     </div>
+    
+    <!--check-->
+<!--  <div class="dropdown">
+    <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">choose
+    <span class="caret"></span></button>
+    <ul class="dropdown-menu">
+      <li><a href="#">3</a></li>
+      <li><a href="#">4</a></li>
+      <li><a href="#">5</a></li>
+    </ul>
+          <button type="button" class="btn btn-primary" onclick="selectSize()">Matrix Base size</button>
+  </div>-->
+   
 </div>
-
-
-
-
-
-
+    
+ 
